Add authentification service

--- a/Hair.Api/Hair.Api.csproj
+++ b/Hair.Api/Hair.Api.csproj
@@ -6,6 +6,8 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>Hair.Api.xml</DocumentationFile>
+    <WarningLevel>3</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
